# project_chimera

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  ssh-start.ps1
astrocyte/src-tauri/: Cargo.toml  tauri.conf.json
astrocyte/src-tauri/src/: config.rs  lib.rs  llm_client.rs  main.rs  memory.rs  persona.rs  platform.rs  scratchpad.rs  settings.rs  skill_stats.rs  skills.rs  stage_stats.rs  state.rs  task_stream.rs
crucible_core/: .gitignore  CONTRACT-PREOP-AUDIT.md  config.example.toml  config.example.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
crucible_core/docs/: CONFIG_SCHEMA.md  INTENT_AND_DEGRADATION.md  LOGGING_STANDARD.md  PHASE_III_B1_AUDIT_MW_MIDDLEWARE.md  PROMPT_MIDDLEWARE.md  SSE_PROTOCOL.md  TOOL_PROTOCOL.md
crucible_core/docs/prompt_archive/: review_zero_v3.md
crucible_core/prompts/chimera_sys/: reviewer_zero.j2  user_profile.j2
crucible_core/prompts/obsidian_tpl/: Tpl_decision.md  Tpl_insight.md  Tpl_knowledge.md  Tpl_thought.md  decision_node.j2  deep_read_node.j2  deep_read_survey_node.j2  insight_node.j2  knowledge_node.j2  thought_node.j2
crucible_core/prompts/tasks/: daily_summary.j2  daily_summary_telegram_html.j2  filter_task.j2
crucible_core/prompts/tasks/optics/: eval_scalpel.j2  method_scalpel.j2  synthesis.j2
crucible_core/scripts/: _verify_log_prefixes.py  paper2md-exit-codes.yaml  run_batch_filter.py  run_daily.py  run_ingest.py  run_lens.py  run_single.py  smoke_intent_recognition.py  smoke_intent_router_live.py  start_oligo.py
crucible_core/src/crucible/: __init__.py  bootstrap.py
crucible_core/src/crucible/core/: __init__.py  config.py  naming.py  platform.py  schemas.py
crucible_core/src/crucible/ports/: __init__.py
crucible_core/src/crucible/services/: __init__.py  batch_filter_workflow.py  cli_presenter.py  daily_chimera_service.py  filter_service.py  metrics_service.py  optics_lens_registry.py  optics_service.py  single_paper_pipeline_service.py  skill_stats_service.py  staging_service.py  task_service.py
crucible_core/src/oligo/: server.py
crucible_core/src/oligo/api/: __init__.py  server.py  staging_routes.py
crucible_core/src/oligo/core/: __init__.py  agent.py  prompt_composer.py  schemas.py  sse.py  text_sanitizer.py  tool_protocol.py
crucible_core/src/oligo/prompts/: final_authors_note.md  final_guardrail.md.j2  final_persona_override.md  final_skill_directive.md  final_system_core.md  router_intro.md.j2  (+4 more)
crucible_core/tests/oligo/: conftest.py  test_agent_harness.py  test_archival.py  test_argument_repair.py  test_lifecycle_after_long_task.py  test_miner_tools.py  test_obsidian_graph_query.py  test_prompt_composer.py  test_prompt_middleware_regression.py  test_read_vault_file_tool.py  test_subagent.py  test_subprocess_task.py  test_task_event_bus.py  test_text_sanitizer.py  test_theater_stream.py  test_tool_execution.py  test_tool_partition.py  test_tool_protocol.py  test_tool_protocol_regression.py  test_vault_query.py  test_web_search.py
crucible_core/tests/services/: test_batch_filter_workflow.py  test_daily_chimera_service.py  test_skill_stats_service.py  test_staging_service.py
(+180 files in other folders)
